// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sample block 1`] = `
.emotion-5 {
  font-size: 0.9em;
  color: #4a4646;
  line-height: 1.3em;
}

.emotion-5 h1,
.emotion-5 h2,
.emotion-5 h3,
.emotion-5 h4,
.emotion-5 h5,
.emotion-5 h6 {
  margin: 1em 0;
  color: #222;
}

.emotion-0 {
  margin-bottom: 0.8em;
  line-height: 1.7em;
}

.emotion-4 {
  margin-bottom: 0.25em;
}

.emotion-1 {
  margin-top: 0.25em;
}

<div
  className="emotion-5"
>
  <h1>
    Foo
  </h1>
  <h2>
    Baz
  </h2>
  <h3>
    bar
  </h3>
  <p
    className="emotion-0"
  >
    foo baz bar
  </p>
  <ul
    className="emotion-4"
    start={null}
  >
    <li
      checked={null}
      className="emotion-1"
    >
      a
    </li>
    <li
      checked={null}
      className="emotion-1"
    >
      b
    </li>
    <li
      checked={null}
      className="emotion-1"
    >
      c
    </li>
  </ul>
</div>
`;

exports[`nl2br 1`] = `
.emotion-2 {
  font-size: 0.9em;
  color: #4a4646;
  line-height: 1.3em;
}

.emotion-2 h1,
.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4,
.emotion-2 h5,
.emotion-2 h6 {
  margin: 1em 0;
  color: #222;
}

.emotion-0 {
  margin-bottom: 0.8em;
  line-height: 1.7em;
}

.emotion-1 {
  margin-bottom: 1.8em;
}

<div
  className="emotion-2"
>
  <p
    className="emotion-0"
  >
    aaa
    <br />
    bbb
    <br />
    ccc
  </p>
  <div
    className="emotion-1"
  >
    <pre
      style={
        Object {
          "MozHyphens": "none",
          "MozTabSize": "4",
          "OTabSize": "4",
          "WebkitHyphens": "none",
          "background": "#2d2d2d",
          "color": "#ccc",
          "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
          "hyphens": "none",
          "lineHeight": "1.5",
          "margin": ".5em 0",
          "msHyphens": "none",
          "overflow": "auto",
          "padding": "1em",
          "tabSize": "4",
          "textAlign": "left",
          "whiteSpace": "pre",
          "wordBreak": "normal",
          "wordSpacing": "normal",
          "wordWrap": "normal",
        }
      }
    >
      <code
        style={
          Object {
            "MozHyphens": "none",
            "MozTabSize": "4",
            "OTabSize": "4",
            "WebkitHyphens": "none",
            "background": "none",
            "color": "#ccc",
            "fontFamily": "Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace",
            "hyphens": "none",
            "lineHeight": "1.5",
            "msHyphens": "none",
            "tabSize": "4",
            "textAlign": "left",
            "whiteSpace": "pre",
            "wordBreak": "normal",
            "wordSpacing": "normal",
            "wordWrap": "normal",
          }
        }
      >
        a
b
c
“\`\`\`
      </code>
    </pre>
  </div>
</div>
`;

exports[`nl2br-link 1`] = `
.emotion-2 {
  font-size: 0.9em;
  color: #4a4646;
  line-height: 1.3em;
}

.emotion-2 h1,
.emotion-2 h2,
.emotion-2 h3,
.emotion-2 h4,
.emotion-2 h5,
.emotion-2 h6 {
  margin: 1em 0;
  color: #222;
}

.emotion-1 {
  margin-bottom: 0.8em;
  line-height: 1.7em;
}

.emotion-0 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
  className="emotion-2"
>
  <p
    className="emotion-1"
  >
    <a
      className="emotion-0"
      href="http://example.com"
    >
      http://example.com
    </a>
    <br />
    bbb
  </p>
</div>
`;

exports[`nl2br-link-not-break 1`] = `
.emotion-5 {
  font-size: 0.9em;
  color: #4a4646;
  line-height: 1.3em;
}

.emotion-5 h1,
.emotion-5 h2,
.emotion-5 h3,
.emotion-5 h4,
.emotion-5 h5,
.emotion-5 h6 {
  margin: 1em 0;
  color: #222;
}

.emotion-4 {
  margin-bottom: 0.8em;
  line-height: 1.7em;
}

.emotion-1 {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-0 {
  border: 1px solid #ccc;
  background: #eee;
  border-radius: 4px;
  padding: 0.1em 0.4em;
  margin: 0.1em;
}

<div
  className="emotion-5"
>
  <p
    className="emotion-4"
  >
    今回は
    <a
      className="emotion-1"
      href="https://github.com/rexxars/react-markdown#parsing-html"
    >
      <code
        className="emotion-0"
        value="react-markdown"
      >
        react-markdown
      </code>
    </a>
    と
    <a
      className="emotion-1"
      href="https://github.com/conorhastings/react-syntax-highlighter"
    >
      <code
        className="emotion-0"
        value="react-sytnax-highlight"
      >
        react-sytnax-highlight
      </code>
    </a>
  </p>
</div>
`;

exports[`web-component 1`] = `
.emotion-1 {
  font-size: 0.9em;
  color: #4a4646;
  line-height: 1.3em;
}

.emotion-1 h1,
.emotion-1 h2,
.emotion-1 h3,
.emotion-1 h4,
.emotion-1 h5,
.emotion-1 h6 {
  margin: 1em 0;
  color: #222;
}

.emotion-0 {
  margin-bottom: 0.8em;
  line-height: 1.7em;
}

<div
  className="emotion-1"
>
  <p
    className="emotion-0"
  >
    aaa
    <br />
    <x-some-item />
    foo
    <br />
    ccc
  </p>
</div>
`;
